--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -86,6 +86,13 @@
 .collection {
     border: none;
 }
+.chip>img {
+    float: right;
+    margin: 0 0px 0 10px;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+}
 
 
 
